hphp/test/zend/good/Zend/tests/errmsg_012.php.expectf

Fatal error: __autoload() must take exactly 1 argument in %s/errmsg_012.php on line 3
